<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="share_action_provider_expand_label">See all…</string>
    <string name="share_action_provider_target_not_found">Target Activity Not Found!</string>
    <string name="spv_default_progress_text">Loading…</string>
    <string name="spv_default_text">Load More</string>
    <string name="account">账户</string>
    <string name="acknowledgements">本应用使用的字体为汉仪旗黑和汉仪楷体</string>
    <string name="act_title_app_suggest">应用推荐</string>
    <string name="act_title_shelf">本地在读</string>
    <string name="act_title_store">作品商店</string>
    <string name="action_add_notifiee">标记提醒</string>
    <string name="action_add_shortcut">添加到桌面</string>
    <string name="action_cancel_subscription">退订</string>
    <string name="action_delete">删除</string>
    <string name="action_deposit">充值</string>
    <string name="action_edit">编辑</string>
    <string name="action_mark_all_read">全部标记为已读</string>
    <string name="action_new_comment">添加回复</string>
    <string name="action_purchase">购买</string>
    <string name="action_refresh">刷新</string>
    <string name="action_search">搜索</string>
    <string name="action_select_photo">从相册中选择</string>
    <string name="action_share">分享</string>
    <string name="action_submit">提交</string>
    <string name="action_take_photo">拍照</string>
    <string name="action_title_selected_n_items">选中了 %s 项</string>
    <string name="action_view_mode">切换浏览模式</string>
    <string name="action_works_kind">分类</string>
    <string name="agent_publish_info">共 %1$d 部作品</string>
    <string name="also_share_to">同时分享到：</string>
    <string name="amount_balance">余额</string>
    <string name="app_description">走在印刷机之前</string>
    <string name="app_name">豆瓣阅读</string>
    <string name="authored">著</string>
    <string name="btn_account">账户</string>
    <string name="btn_all_chapters">全部文章</string>
    <string name="btn_changelog">更新日志</string>
    <string name="btn_check_update">检查新版本</string>
    <string name="btn_clear_history">清除搜索历史</string>
    <string name="btn_composed">已发表</string>
    <string name="btn_confirm_and_get">确认领取</string>
    <string name="btn_confirm_and_purchase">确认购买</string>
    <string name="btn_create_gift_pack">生成礼物</string>
    <string name="btn_delete">删除</string>
    <string name="btn_deposit">充值</string>
    <string name="btn_deposit_with_alipay">使用支付宝充值</string>
    <string name="btn_edit_gift_note">修改赠言</string>
    <string name="btn_feeds">订阅更新</string>
    <string name="btn_font_huge">特大号字</string>
    <string name="btn_font_large">大号字</string>
    <string name="btn_font_medium">中号字(默认)</string>
    <string name="btn_font_small">小号字</string>
    <string name="btn_full_toc">共 %1$d 篇</string>
    <string name="btn_gift">礼物</string>
    <string name="btn_gift_pack_is_depleted">礼物已全部领完</string>
    <string name="btn_gift_pack_is_depleted_owner">礼物已全部送出</string>
    <string name="btn_gift_receive">立即领取礼物</string>
    <string name="btn_login">登录</string>
    <string name="btn_login_or_register">登录 | 注册</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_more">更多</string>
    <string name="btn_more_reviews">全部评论</string>
    <string name="btn_note_next">下一条</string>
    <string name="btn_note_prev">上一条</string>
    <string name="btn_notification">提醒</string>
    <string name="btn_own">已购买</string>
    <string name="btn_present">赠送</string>
    <string name="btn_purchase">购买</string>
    <string name="btn_purchase_chapter">仅购买本章节 | %1$s</string>
    <string name="btn_purchase_whole_works">购买全本 | %1$s</string>
    <string name="btn_purchase_works">购买 | %1$s</string>
    <string name="btn_redeem">兑换</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_register">注册</string>
    <string name="btn_report_to_douban">反馈给豆瓣</string>
    <string name="btn_secretly">仅自己可见</string>
    <string name="btn_share_gift_pack">送出礼物</string>
    <string name="btn_share_my_gifts">晒一晒</string>
    <string name="btn_subscribe">订阅</string>
    <string name="btn_take_for_free">领取</string>
    <string name="btn_theme_day">白天模式</string>
    <string name="btn_theme_night">夜间模式</string>
    <string name="btn_to_my_own_works">去看书</string>
    <string name="btn_to_shelf">去读本地作品</string>
    <string name="btn_view_works_profile">去看看这部作品</string>
    <string name="button_retry">重试</string>
    <string name="button_try">直接使用</string>
    <string name="card_title_abstract">简介</string>
    <string name="card_title_agent">提供方</string>
    <string name="card_title_author">作者</string>
    <string name="card_title_column_toc">专栏文章</string>
    <string name="card_title_reviews">读者评论</string>
    <string name="card_title_serial_toc">连载章节</string>
    <string name="card_title_toc">目录</string>
    <string name="card_title_works_tags">标签</string>
    <string name="chinese_dot">、</string>
    <string name="com.crashlytics.android.build_id">eafd4f9a-1a7b-40cb-8959-fed630bdfc98</string>
    <string name="command_btn_text_contents">目录</string>
    <string name="command_btn_text_notes">笔记</string>
    <string name="command_btn_text_reviews">评论</string>
    <string name="complicated_title_for_shared_column_chapter">%1$s - %2$s | 来自豆瓣阅读专栏《%3$s》</string>
    <string name="complicated_title_for_shared_serial_chapter">%1$s - %2$s | 来自豆瓣阅读连载《%3$s》</string>
    <string name="content_description_drawer_close">关闭左侧抽屉</string>
    <string name="content_description_drawer_open">打开左侧抽屉</string>
    <string name="copyright">Copyright © 2016 Douban Inc.</string>
    <string name="default_gift_message">愿你拥有愉快的阅读时光。</string>
    <string name="description_available_count">还可以选 %1$s 本</string>
    <string name="description_set_quantity">你可以只选一本，单独送给某人，也可以多选几本，发到微信群、朋友圈或公共平台，让大家来抢。</string>
    <string name="description_write_gift_message">收到礼物的友邻打开这部作品阅读时，\n会在扉页上看到你的赠言。</string>
    <string name="device_android">其他安卓设备</string>
    <string name="device_ios"> iOS </string>
    <string name="device_ipad"> iPad </string>
    <string name="device_other">其他设备</string>
    <string name="device_webreader">浏览器</string>
    <string name="dialog_button_add">添加</string>
    <string name="dialog_button_bind">绑定</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="dialog_button_continue_download">仍然下载</string>
    <string name="dialog_button_discard_anonymous_data">不添加</string>
    <string name="dialog_button_discard_content">确认离开</string>
    <string name="dialog_button_download">下载</string>
    <string name="dialog_button_download_again">重新下载</string>
    <string name="dialog_button_download_later">暂不下载</string>
    <string name="dialog_button_download_now">现在下载</string>
    <string name="dialog_button_feedback">报告给豆瓣</string>
    <string name="dialog_button_ignore">忽略</string>
    <string name="dialog_button_keep_notifiee">保留提醒</string>
    <string name="dialog_button_login">登录</string>
    <string name="dialog_button_merge_anonymous_data">添加</string>
    <string name="dialog_button_ok">确定</string>
    <string name="dialog_button_remove_notifiee">取消提醒</string>
    <string name="dialog_button_return_to_edit">继续编辑</string>
    <string name="dialog_button_skip_login">直接%1$s</string>
    <string name="dialog_message_bind_weibo_confirm">分享需要绑定新浪微博账号，是否现在绑定？</string>
    <string name="dialog_message_book_data_update_content_recommended">本作品有内容修订，点击下载最新版本</string>
    <string name="dialog_message_book_data_update_format_recommended">本作品包含特殊样式，点击下载最新版本以获得最佳展示效果</string>
    <string name="dialog_message_book_purchased_download_recommended">已购买本作品，点击下载全文</string>
    <string name="dialog_message_cancel_subscription_confirm">确认退订？退订后将不再收到更新提醒</string>
    <string name="dialog_message_clear_token_confirm">确定清理token？这个操作类似于退出登录，但是不会删除用户的本地数据。</string>
    <string name="dialog_message_confirm_to_delete_note">确认删除该批注？</string>
    <string name="dialog_message_confirm_to_login_to_sync_note">登录后可以公开分享批注，现在登录吗？</string>
    <string name="dialog_message_discard_content_confirm">编辑的内容将被删除，确认要离开页面吗？</string>
    <string name="dialog_message_login_required">你还没有登录，请登录以后再%1$s。</string>
    <string name="dialog_message_login_required_to_make_note_public">登录后才能将批注公开，现在登录吗？</string>
    <string name="dialog_message_login_suggested">你还没有登录，需要登录以后再%1$s吗？</string>
    <string name="dialog_message_merge_anonymous_data">你在未登录时使用过，是否将所购买的电子书、笔记、阅读进度等添加到本账号？</string>
    <string name="dialog_message_no_quantity_for_gift">你已经送了 %1$s 本了，不能再送了</string>
    <string name="dialog_message_non_wifi_download_confirm">你正在使用手机流量，下载本作品需要 %s，确认现在下载？</string>
    <string name="dialog_message_paging_failed">文件读写错误，请尝试重新打开或重新下载此书。</string>
    <string name="dialog_message_purchase_succeed">%1$s成功，是否现在下载？</string>
    <string name="dialog_message_remove_notifiee_confirm">取消提醒后，将不会在作品发布时提醒你，可能错过这本好书哦。</string>
    <string name="dialog_message_sync_reading_progress">上次读到第 %1$s 页，点击跳转</string>
    <string name="dialog_message_unbind_qq_confirm">确定要解除QQ账号的绑定？</string>
    <string name="dialog_message_unbind_weibo_confirm">确定解除新浪微博的绑定？</string>
    <string name="dialog_message_works_download_need">下载作品后才能查看笔记，现在下载？</string>
    <string name="dialog_msg_loading">正在加载...</string>
    <string name="dialog_msg_logout_after_sync_failed">退出登录时同步本地划线、书签、进度数据出现错误，现在退出会丢失这些数据，依然确定退出吗？</string>
    <string name="dialog_msg_logout_confirm">退出登录后，本地作品将被清空，确定要退出登录？</string>
    <string name="drawer_menu_search">搜索</string>
    <string name="drawer_menu_shelf">本地在读</string>
    <string name="drawer_menu_store">作品商店</string>
    <string name="drawer_menu_test_works">测试书籍</string>
    <string name="general_load_failed">加载失败，请稍后重试</string>
    <string name="hint_empty_shelf">阅读过的作品会自动保存到本地\n可在无网环境下继续阅读</string>
    <string name="hint_nickname">昵称</string>
    <string name="menu_text_selection_add_underline">划线</string>
    <string name="menu_text_selection_copy">复制</string>
    <string name="menu_text_selection_correct">纠错</string>
    <string name="menu_text_selection_delete_underline">擦除</string>
    <string name="menu_text_selection_note">批注</string>
    <string name="menu_text_selection_share">分享</string>
    <string name="msg_theme_disabled_for_gallery">画册背景色由作者指定，无法切换</string>
    <string name="msg_use_system_brightness">使用系统亮度</string>
    <string name="reader_btn_retry">重试</string>
    <string name="text_avatar">头像</string>
    <string name="title_deposit_record">充值记录</string>
    <string name="title_purchase_record">消费记录</string>
    <string name="title_redeem_amount_record">礼券记录</string>
    <string name="title_redeem_works_record">兑换作品记录</string>
    <string name="title_test_field">试验田</string>
</resources>