<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" reader:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" reader:orientation="vertical" style="@style/AppWidget_Page">
    <TextView reader:textSize="15dp" reader:id="@+id/text_status" reader:layout_width="wrap_content" reader:layout_height="wrap_content" reader:layout_marginBottom="@dimen/general_subview_vertical_padding_medium" reader:textColorArray="@array/green" />
    <ProgressBar reader:id="@+id/download_progress" reader:visibility="invisible" style="@style/AppWidget_ProgressBar_Horizontal" />
    <TextView reader:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" reader:id="@+id/guide_for_shelf" reader:visibility="invisible" reader:layout_width="match_parent" reader:layout_height="wrap_content" reader:layout_marginTop="@dimen/general_subview_vertical_padding_huge" reader:text="@string/hint_empty_shelf" style="@style/AppWidget_Text_Secondary" />
    <Button reader:id="@+id/btn_retry" reader:visibility="invisible" reader:layout_marginTop="@dimen/general_subview_vertical_padding_huge" reader:text="@string/reader_btn_retry" style="@style/AppWidget_Button_Secondary" />
    <Button reader:id="@+id/btn_report" reader:visibility="invisible" reader:layout_marginTop="@dimen/general_subview_vertical_padding_normal" reader:text="@string/btn_report_to_douban" style="@style/AppWidget_Button_Secondary" />
</LinearLayout>
