<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <ScrollView app:layout_width="match_parent" app:layout_height="match_parent" app:fillViewport="true">
        <LinearLayout app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:paddingTop="@dimen/general_subview_vertical_padding_huge" app:paddingBottom="@dimen/general_subview_vertical_padding_huge" app:layout_height="wrap_content" style="@style/AppWidget_Page">
            <View app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_weight="1.0" />
            <ImageView app:layout_width="wrap_content" app:layout_height="wrap_content" app:src="@drawable/ic_logo_about" app:autoDimInNightMode="true" />
            <TextView app:id="@+id/text_version" app:layout_marginTop="@dimen/general_subview_vertical_padding_large" style="@style/AppWidget_Text_Secondary" />
            <TextView app:textSize="@dimen/general_font_size_small" app:id="@+id/text_uid" style="@style/AppWidget_Text_Secondary" />
            <Button app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/button_changelog" app:layout_marginTop="@dimen/general_subview_vertical_padding_large" app:text="@string/btn_changelog" style="@style/AppWidget_Button_Secondary" />
            <Button app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/button_check_update" app:layout_marginTop="@dimen/general_subview_vertical_padding_normal" app:text="@string/btn_check_update" style="@style/AppWidget_Button_Primary" />
            <View app:layout_marginTop="30dp" style="@style/AppWidget_Divider_Horizontal" />
            <TextView app:id="@+id/copyright" app:paddingLeft="@dimen/page_horizontal_padding" app:paddingRight="@dimen/page_horizontal_padding" app:layout_marginTop="30dp" app:text="@string/copyright" style="@style/AppWidget_Text_Secondary" />
            <TextView app:id="@+id/acknowledgements" app:paddingLeft="@dimen/page_horizontal_padding" app:paddingRight="@dimen/page_horizontal_padding" app:layout_marginTop="@dimen/general_subview_vertical_padding_small" app:text="@string/acknowledgements" style="@style/AppWidget_Text_Secondary" />
            <View app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
