<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:paddingBottom="@dimen/general_subview_vertical_padding_large" android:focusable="true" android:focusableInTouchMode="true" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/AppWidget_Page">
            <RelativeLayout android:id="@+id/layout_avatar" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.douban.book.reader.view.UserAvatarView android:id="@+id/user_avatar" android:layout_marginTop="@dimen/general_subview_vertical_padding_large" android:layout_centerHorizontal="true" style="@style/AppWidget_ImageView_UserAvatar_Large" />
                <TextView android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/page_horizontal_padding" android:text="@string/text_avatar" android:layout_alignTop="@+id/user_avatar" android:layout_alignBottom="@+id/user_avatar" android:layout_alignParentLeft="true" style="@style/AppWidget_Text_Secondary" />
            </RelativeLayout>
            <EditText android:id="@+id/edt_nickname" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general_subview_vertical_padding_large" android:hint="@string/hint_nickname" />
            <Button android:id="@+id/btn_confirm" android:layout_marginTop="@dimen/general_subview_vertical_padding_large" android:text="@string/dialog_button_ok" style="@style/AppWidget_Button_Primary_Large" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
